--- a/bistro/index.html
+++ b/bistro/index.html
@@ -27,7 +27,7 @@ h2 {
 
 <body>
 
-<h1><img src="bird.png" alt="logo"><br>Black Goose Bistro</h1>
+<h1><img src="blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
 
 <h2>The Restraunt</h2> 
 <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to highlight the freshest local ingrediants.</p> 
