--- a/bistro/tapenade.html
+++ b/bistro/tapenade.html
@@ -32,6 +32,11 @@
         texture.</li>
         <li>Serve on thin toast rounds with goat cheese and fresh basil garnish (optional).</li>
     </ol>
+    
+    <p><a href="recipes/pasta/linguine.html">Try the Linguine with Clam Sauce</a></p>
+    <p><a href="http://www.allrecipes.com" target="_blank">Go to Allrecipes.com</a></p>
+    <p><a href="../jenskitch.html">[Back to the home page]</a></p>
+    
 </body>
 
 </html>
