--- a/bistro/jenskitchen/recipes/tapenade.html
+++ b/bistro/jenskitchen/recipes/tapenade.html
@@ -4,6 +4,12 @@
 
     <meta charset="utf-8">
     <meta name="viewpoint" content="wide=device-width">
+    <style>
+    body { background-color: #faf2e4; margin:2em 5%; font-family: Georgia, "Times New Roman", Times, serif;}
+    h1, h2 { color: #000000;}h1 { font-size: 1.5em;}
+    h2 { font-family: Verdana, Geneva, sans-serif; font-size: 1em;}
+    small { color: #999;}
+    </style>
         
     <title>Tapenade Recipe</title>
     
