--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -13,10 +13,11 @@
     <h1>The Black Goose Bistro News</h1>
 <nav>
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/">Menu</a></li>
-        <li><a href="/">News</a></li>
-        <li><a href="/">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="bgnews.html">News</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
     </ul>
 </nav>
 </header>
