--- a/bistro/jenskitchen/recipes/tapenade.html
+++ b/bistro/jenskitchen/recipes/tapenade.html
@@ -52,7 +52,7 @@ h2 {
     
     <p><a href="recipes/pasta/linguine.html">Try the Linguine with Clam Sauce</a></p>
     <p><a href="http://www.allrecipes.com" target="_blank">Go to Allrecipes.com</a></p>
-    <p><a href="../jenskitch.html">[Back to the home page]</a></p>
+    <p><a href="../jenskitch.html">[Back to Jen's Kitchen page]</a></p>
     
 </body>
 
