--- a/bistro/jenskitchen/recipes/salmon.html
+++ b/bistro/jenskitchen/recipes/salmon.html
@@ -27,7 +27,7 @@ h1, h2 { color: #000000;}h1 { font-size: 1.5em;}
 </ol>
 
 <p><a href="recipes/tapenade.html">Go to the tapenade recipe</a></p>
-<p><a href="jenskitchen/jenskitch.html">Back to Jen's Kitchen page</a></p>
+<p><a href="jenskitchen/jenskitch.html">[Back to Jen's Kitchen page]</a></p>
 
 </body>
 </html>
