--- a/bistro/index.html
+++ b/bistro/index.html
@@ -34,7 +34,7 @@ h2 {
         <li><a href="menu.html">Menu</a></li>
         <li><a href="bgnews.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="/jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+        <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen<a/></li>
     </ul>
 </nav>
 <h2>The Restraunt</h2> 
