--- a/bistro/jenskitchen/about.html
+++ b/bistro/jenskitchen/about.html
@@ -17,7 +17,7 @@ h1, h2 { color: #000000;}h1 { font-size: 1.5em;}
     
     <p>If you have recommendations, feel free to email me at jen@example.com.</p>
 
-<p><a href="/jenskitchen/jenskitch.html">[Back to Jen's Kitchen page]</a></p>
+<p><a href="jenskitch.html">[Back to Jen's Kitchen page]</a></p>
 
 </body>
 </html>
