--- a/bistro/jenskitchen/recipes/tapenade.html
+++ b/bistro/jenskitchen/recipes/tapenade.html
@@ -50,7 +50,7 @@ h2 {
         <li>Serve on thin toast rounds with goat cheese and fresh basil garnish (optional).</li>
     </ol>
     
-    <p><a href="recipes/pasta/linguine.html">Try the Linguine with Clam Sauce</a></p>
+    <p><a href="/pasta/linguine.html">Try the Linguine with Clam Sauce</a></p>
     <p><a href="http://www.allrecipes.com" target="_blank">Go to Allrecipes.com</a></p>
     <p><a href="../jenskitch.html">[Back to Jen's Kitchen page]</a></p>
     
