--- a/bistro/jenskitchen/recipes/pasta/linguine.html
+++ b/bistro/jenskitchen/recipes/pasta/linguine.html
@@ -29,7 +29,7 @@ h1, h2 { color: #000000;}h1 { font-size: 1.5em;}
 </ol>
 
 <p><a href="../about.html">About Jen's Kitchen</a></p>
-<p><a href="/jenskitchen/jenskitch.html">[Back to Jen's Kitchen page]</a></p>
+<p><a href="jenskitch.html">[Back to Jen's Kitchen page]</a></p>
 
 </body>
 </html>
