--- a/bistro/jenskitchen/recipes/pasta/couscous.html
+++ b/bistro/jenskitchen/recipes/pasta/couscous.html
@@ -31,8 +31,8 @@ h1, h2 { color: #000000;}h1 { font-size: 1.5em;}
 <li>When the couscous is cool, toss in the peas, mint, veggies and coat with the dressing. It can be served right away or saved until the next day.</li>
 </ol>
 
-<p><a href="recipes/salmon.html">Try this with Garlic Salmon</a></p>
-<p><a href="/jenskitchen/jenskitch.html">[Back to Jen's Kitchen page]</a></p>
+<p><a href="../salmon.html">Try this with Garlic Salmon</a></p>
+<p><a href="jenskitch.html">[Back to Jen's Kitchen page]</a></p>
 
 </body>
 </html>
