--- a/bistro/jenskitchen/recipes/salmon.html
+++ b/bistro/jenskitchen/recipes/salmon.html
@@ -26,8 +26,8 @@ h1, h2 { color: #000000;}h1 { font-size: 1.5em;}
 <li>I usually serve this with an aromatic rice and a lightly seasoned stir fry.</li>
 </ol>
 
-<p><a href="recipes/tapenade.html">Go to the tapenade recipe</a></p>
-<p><a href="jenskitchen/jenskitch.html">[Back to Jen's Kitchen page]</a></p>
+<p><a href="tapenade.html">Go to the tapenade recipe</a></p>
+<p><a href="../jenskitch.html">[Back to Jen's Kitchen page]</a></p>
 
 </body>
 </html>
