--- a/bistro/jenskitchen/recipes/pasta/couscous.html
+++ b/bistro/jenskitchen/recipes/pasta/couscous.html
@@ -32,7 +32,7 @@ h1, h2 { color: #000000;}h1 { font-size: 1.5em;}
 </ol>
 
 <p><a href="../salmon.html">Try this with Garlic Salmon</a></p>
-<p><a href="jenskitch.html">[Back to Jen's Kitchen page]</a></p>
+<p><a href="../jenskitch.html">[Back to Jen's Kitchen page]</a></p>
 
 </body>
 </html>
