--- a/bistro/jenskitchen/recipes/pasta/linguine.html
+++ b/bistro/jenskitchen/recipes/pasta/linguine.html
@@ -28,7 +28,7 @@ h1, h2 { color: #000000;}h1 { font-size: 1.5em;}
 <li>Taste the clam sauce and add salt and pepper to taste. If you're using butter, add one last tablespoon or two to bind the sauce (if you're using margarine, don't bother).</li>
 </ol>
 
-<p><a href="../about.html">About Jen's Kitchen</a></p>
+<p><a href="/about.html">About Jen's Kitchen</a></p>
 <p><a href="jenskitch.html">[Back to Jen's Kitchen page]</a></p>
 
 </body>
