--- a/bistro/index.html
+++ b/bistro/index.html
@@ -22,6 +22,17 @@ h2 {
     color: #000000;
     font-size: 1em;
 }
+footer {
+    border-top: 1px solid #000000;
+    text-align: center;
+    padding-top: 1em;
+}
+footer img {
+    width: 40px;
+    height: 40px;
+    margin-left: .5em;
+    margin-right: .5em;
+}
 </style>
 </head>
 
@@ -58,5 +69,12 @@ h2 {
 <h2>Location and Hours</h2>
 <p>Seekonk, Massachusetts;<br>
 Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight.</p>
+    
+<footer>
+    <p>please visit our social media pages</p>
+    <p><img scr="icons/twitter.svg" alt="twitter"></p>
+    <p><img scr="icons/facebook.svg" alt="facebook"></p>
+    <p><img scr="icons/instagram.svg" alt="instagram"></p>
+</footer>
 </body>
 </html>
