--- a/bistro/index.html
+++ b/bistro/index.html
@@ -58,6 +58,7 @@ footer img {
         <li><a href="bgnews.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+        <li><a href="gallery/index.html">Gallery</a></li>
     </ul>
 </nav>
 <h2>The Restraunt</h2> 
