--- a/bistro/index.html
+++ b/bistro/index.html
@@ -72,7 +72,7 @@ footer img {
 Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight.</p>
     
 <footer>
-    <p>please visit our social media pages</p>
+    <p>Please visit our social media pages</p>
     <p><img scr="icons/twitter.svg" alt="twitter"></p>
     <p><img scr="icons/facebook.svg" alt="facebook"></p>
     <p><img scr="icons/instagram.svg" alt="instagram"></p>
