--- a/bistro/index.html
+++ b/bistro/index.html
@@ -73,9 +73,9 @@ Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight.<
     
 <footer>
     <p>Please visit our social media pages</p>
-    <p><img scr="icons/twitter.svg" alt="twitter"></p>
-    <p><img scr="icons/facebook.svg" alt="facebook"></p>
-    <p><img scr="icons/instagram.svg" alt="instagram"></p>
+    <p><img src="icons/twitter.svg" alt="twitter"></p>
+    <p><img src="icons/facebook.svg" alt="facebook"></p>
+    <p><img src="icons/instagram.svg" alt="instagram"></p>
 </footer>
 </body>
 </html>
