--- a/resume/index.html
+++ b/resume/index.html
@@ -156,7 +156,7 @@ footer img {
     <img src="conv.jpg" alt="A Converse advertisment">
 </a>
 <a href="gallery.html">
-    <img src="convers.jpg" alt="A Converse advertisment">
+    <img src="convers.JPG" alt="A Converse advertisment">
 </a>
 </p>
 </section>
