--- a/bistro/index.html
+++ b/bistro/index.html
@@ -71,6 +71,8 @@ footer img {
 <p>Seekonk, Massachusetts;<br>
 Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight.</p>
     
+<a href="pizza.html"><img src="button.gif" alt="Red button with the words "Order Pizza"></a>
+    
 <footer>
     <p>Please visit our social media pages</p>
     <p>
