--- a/bistro/index.html
+++ b/bistro/index.html
@@ -71,9 +71,10 @@ footer img {
 <p>Seekonk, Massachusetts;<br>
 Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight.</p>
     
-<a href="pizza.html"><img src="button.gif" alt="Red button with the words 'Order Pizza'></a><br>
-    
+<a href="/pizza/pizza.html"><img src="/pizza/button.gif" alt="Red button with the words 'Order Pizza'></a>
+
 <footer>
+<br>
     <p>Please visit our social media pages</p>
     <p>
     <img src="icons/twitter.svg" alt="twitter">
