--- a/bistro/index.html
+++ b/bistro/index.html
@@ -71,7 +71,7 @@ footer img {
 <p>Seekonk, Massachusetts;<br>
 Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight.</p>
     
-<a href="/pizza/pizza.html"><img src="/pizza/button.gif" alt="Red button with the words 'Order Pizza'></a>
+<a href="/pizza/pizza.html"><img src="/pizza/button.gif" alt="Red button with the words order pizza on it."></a>
 
 <footer>
 <br>
