--- a/bistro/index.html
+++ b/bistro/index.html
@@ -71,10 +71,9 @@ footer img {
 <p>Seekonk, Massachusetts;<br>
 Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight.</p>
     
-<a href="/pizza/pizza.html"><img src="/pizza/button.gif" alt="Red button with the words order pizza on it."></a>
+<p><a href="pizza/pizza.html"><img src="pizza/button.gif" alt="Red button with the words order pizza on it"></a></p>
 
 <footer>
-<br>
     <p>Please visit our social media pages</p>
     <p>
     <img src="icons/twitter.svg" alt="twitter">
