--- a/bistro/index.html
+++ b/bistro/index.html
@@ -71,7 +71,7 @@ footer img {
 <p>Seekonk, Massachusetts;<br>
 Monday through Thursday 11am to 9pm;<br> Friday and Saturday, 11am to midnight.</p>
     
-<p><a href="pizza/pizza.html"><img src="pizza/button.gif" alt="Red button with the words order pizza on it"></a></p>
+<p><a href="pizza/pizza.html"><img src="pizza/button.gif" alt="Red button with the words order pizza on it"></a></p><br>
 
 <footer>
     <p>Please visit our social media pages</p>
