--- a/bistro/cooking/cooking.html
+++ b/bistro/cooking/cooking.html
@@ -61,6 +61,6 @@ img {
     <p>We left that night (technically, early the next morning) with full bellies, new cooking tips, and nearly 5 hours of 
     footage. I'm considering renaming the show "Cooking with Nada Surf".</p>
 
-    <p><a href="ngnews.html">Back</a></p>
+    <p><a href="../ngnews.html">Back</a></p>
 </body>
 </html>
