--- a/resume/conv.html
+++ b/resume/conv.html
@@ -30,7 +30,7 @@ body img {
 <body>
 
 <h1>Gallery</h1>
-    <p><img src="conv.svg" alt= "A Converse advertisment"></p>
+    <p><img src="svg/conv.svg" alt= "A Converse advertisment"></p>
 
     <p><a href="index.html">[Back to Resume]</a></p>
 </body>
