--- a/resume/convers.html
+++ b/resume/convers.html
@@ -30,7 +30,7 @@ body img {
 <body>
 
 <h1>Gallery</h1>
-    <p><img src="convers.svg" alt= "A converse advertisment"></p>
+    <p><img src="svg/convers.svg" alt= "A converse advertisment"></p>
 
     <p><a href="index.html">[Back to Resume]</a></p>
 </body>
