--- a/resume/logo.html
+++ b/resume/logo.html
@@ -30,7 +30,7 @@ body img {
 <body>
 
 <h1>Gallery</h1>
-    <p><img src="logo.svg" alt="A pastel background with a static filter containing the words 'Designs for You.'""></p>
+    <p><img src="svg/logo.svg" alt="A pastel background with a static filter containing the words 'Designs for You.'""></p>
 
     <p><a href="index.html">[Back to Resume]</a></p>
 </body>
