--- a/resume/tech.html
+++ b/resume/tech.html
@@ -30,7 +30,7 @@ body img {
 <body>
 
 <h1>Gallery</h1>
-    <p><img src="tech.svg" alt= "A Tech Fest poster."></p>
+    <p><img src="svg/tech.svg" alt= "A Tech Fest poster."></p>
 
     <p><a href="index.html">[Back to Resume]</a></p>
 </body>
