--- a/resume/van.html
+++ b/resume/van.html
@@ -30,7 +30,7 @@ body img {
 <body>
 
 <h1>Gallery</h1>
-    <p><img src="van.svg" alt= "A travel van driving across the sandy desert."></p>
+    <p><img src="svg/van.svg" alt= "A travel van driving across the sandy desert."></p>
 
     <p><a href="index.html">[Back to Resume]</a></p>
 </body>
