--- a/bistro/cooking/cooking.html
+++ b/bistro/cooking/cooking.html
@@ -3,26 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
+<link href='http://fonts.googleapis.com/css?family=DM+Serif+Display' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="../style.css">
 <title>Black Goose Bistro</title>
-<style>
-h1 {
-    color: orange;
-    border-bottom: 1px solid orange;
-}
-h2 {
-    color: orange;
-    margin-left: 100px;
-}
-p {
-    font-size: large;
-    font-family: sans-serif;
-    margin-left: 100px;
-}
-img {
-    float: right;
-    margin: 0 12px;
-}
-</style>
+
 </head>
 
 
@@ -52,7 +36,7 @@ img {
     <p>I wrote up a streamlined adaptation of his recipe that requires <em>much</em> less time and serves 6 people 
     instead of <i>five</i> times that amount.</p>
 
-    <h2 style="color: grey">The Main Course</h2>
+    <h2>The Main Course</h2>
 
     <p>In addition to the smoky grilled salad, Daniel served tarragon cornish hens with a cognac cream sauce loaded with 
     chanterelles and grapes, and wild rice with grilled ramps (wild garlicky leeks). Dinner was served close to midnight, 
