--- a/bistro/gallery/index.html
+++ b/bistro/gallery/index.html
@@ -3,30 +3,14 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
+<link href='http://fonts.googleapis.com/css?family=DM+Serif+Display' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="../style.css">
 <title>Black Goose Bistro</title>
-<style>
-body {
-    background-color: #faf2e4;
-    margin:0 10%;
-    font-family: serif;
-}
-h1 {
-    text-align: center; 
-    font-family: serif;
-    font-weight: normal; 
-    text-transform: uppercase;
-    border-bottom: 1px solid #000000;
-    margin-top: 30px;
-}
-h2 {
-    color: #000000;
-    font-size: 1em;
-}
-</style>
 </head>
 
 <body>
 
+<header>
 <h1>Black Goose Bistro Gallery</h1>
 <nav>
     <ul>
@@ -34,12 +18,12 @@ h2 {
         <li><a href="../menu.html">Menu</a></li>
         <li><a href="../bgnews.html">News</a></li>
         <li><a href="../contact.html">Contact</a></li>
-        <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+        <li><a href="../jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
         <li><a href="index.html">Gallery</a></li>
     </ul>
 </nav>
-
-<p>Not is our food good, it's also good-looking! Our patrons often stop to admire our fare with a quick Instagram before digging in. We've collected a few of our favorite shots here.</p>
+</header>
+<p>Not only is our food good, it's also good-looking! Our patrons often stop to admire our fare with a quick Instagram before digging in. We've collected a few of our favorite shots here.</p>
 
 <h2>Our Baked Goods</h2>
 
