--- a/bistro/pizza/pizza.html
+++ b/bistro/pizza/pizza.html
@@ -3,23 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
+<link href='http://fonts.googleapis.com/css?family=DM+Serif+Display' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="../style.css">
 <title>Black Goose Bistro</title>
-<style>
-body {
-    background-color: #faf2e4;
-    font-family: serif;
-}
-h1 {
-    text-align: left; 
-    font-family: serif;
-    margin-top: 30px;
-}
-ul {
-    list-style-type: none;
-}
-
-
-</style>
 </head>
 
 <body>
@@ -30,10 +16,10 @@ ul {
 <fieldset>
 <legend>Your Information:</legend>
 <ul>
-    <li><label for="form-name">Name:</label> <input type="text" name="customername" id="form-name"></li>
-    <li>Address: <input type="text" name="address"></li>
-    <li>Telephone Number: <input type="text" name="number"></li>
-    <li>Email Address: <input type="text" name="email"></li>
+    <li><label for="form-name">Name:</label> <input type="text" name="customername" id="form-name"></li><br>
+    <li>Address: <input type="text" name="address"></li><br>
+    <li>Telephone Number: <input type="text" name="number"></li><br>
+    <li>Email Address: <input type="text" name="email"></li><br>
     <li>Delivery Instructions: <br>
         <textarea name="instructions" row="4" cols="60"
         maxlength="400" placeholder="No more than 400 characters long"></textarea></li>
@@ -45,22 +31,22 @@ ul {
     <fieldset>
         <legend>Crust <em>(Choose one)</em></legend>
 <ul>
-    <li><label><input type="radio" name="crust" value="white">Classic White</label></li>
-    <li><input type="radio" name="crust" value="white">Multigrain</li>
-    <li><input type="radio" name="crust" value="white">Cheese-stuffed Crust</li>
-    <li><input type="radio" name="crust" value="white">Gluten-free</li>
+    <li><label><input type="radio" name="crust" value="white">Classic White</label></li><br>
+    <li><input type="radio" name="crust" value="white">Multigrain</li><br>
+    <li><input type="radio" name="crust" value="white">Cheese-stuffed Crust</li><br>
+    <li><input type="radio" name="crust" value="white">Gluten-free</li><br>
 </ul>
     </fieldset>
     <fieldset>
         <legend>Toppings <em>(Choose as many as you want)</em></legend>
 <ul>
-    <li><input type="checkbox" name="toppings[]" value="checked">Red sause</li>
-    <li><input type="checkbox" name="toppings[]" value="white">White sause</li>
-    <li><input type="checkbox" name="toppings[]" value="white">Mozzarella Cheese</li>
-    <li><input type="checkbox" name="toppings[]" value="white">Pepperoni</li>
-    <li><input type="checkbox" name="toppings[]" value="white">Mushrooms</li>
-    <li><input type="checkbox" name="toppings[]" value="white">Peppers</li>
-    <li><input type="checkbox" name="toppings[]" value="white">Anchovies</li>
+    <li><input type="checkbox" name="toppings[]" value="checked">Red sause</li><br>
+    <li><input type="checkbox" name="toppings[]" value="white">White sause</li><br>
+    <li><input type="checkbox" name="toppings[]" value="white">Mozzarella Cheese</li><br>
+    <li><input type="checkbox" name="toppings[]" value="white">Pepperoni</li><br>
+    <li><input type="checkbox" name="toppings[]" value="white">Mushrooms</li><br>
+    <li><input type="checkbox" name="toppings[]" value="white">Peppers</li><br>
+    <li><input type="checkbox" name="toppings[]" value="white">Anchovies</li><br>
 </ul>   
 </fieldset>
 
