--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -4,28 +4,9 @@
     
         <meta charset="utf-8">
         <meta name="viewpoint" content="wide=device-width">
-
+        <link href='http://fonts.googleapis.com/css?family=DM+Serif+Display' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="style.css">
         <title>The Black Goose Bistro News</title>
-  
-     <style>
-body {
-    background-color: #faf2e4;
-    margin:0 10%;
-    font-family: serif;
-}
-h1 {
-    text-align: center; 
-    font-family: serif;
-    font-weight: normal; 
-    text-transform: uppercase;
-    border-bottom: 1px solid #000000;
-    margin-top: 30px;
-}
-h2 {
-    color: #000000;
-    font-size: 1em;
-}
-</style>
     </head>
 <body>
 
