--- a/bistro/gallery/burgers.html
+++ b/bistro/gallery/burgers.html
@@ -3,32 +3,15 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
+<link href='http://fonts.googleapis.com/css?family=DM+Serif+Display' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="../style.css">
 <title>Black Goose Bistro</title>
-<style>
-body {
-    background-color: #faf2e4;
-    margin:0 10%;
-    font-family: serif;
-    text-align: center;
-}
-body img {
-    text-align: center;
-}
-h1 {
-    text-align: center; 
-    font-family: serif;
-    font-weight: normal; 
-    text-transform: uppercase;
-    border-bottom: 1px solid #000000;
-    margin-top: 30px;
-}
-
-</style>
 </head>
 
 <body>
-
+<header>
 <h1>Gallery: The Best Burgers</h1>
+</header>
     <p><img src="photos/burgers-800.jpg" alt="close-up of a burger" width="800" height="600"></p>
 
     <p><a href="index.html">[Back to Gallery]</a></p>
