--- a/bistro/jenskitchen/about.html
+++ b/bistro/jenskitchen/about.html
@@ -3,14 +3,24 @@
 <head>
 <meta charset="utf-8">
 <title>Jen's Kitchen</title>
-<style>
-body { background-color: #faf2e4; margin:2em 5%; font-family: Georgia, "Times New Roman", Times, serif;}
-h1, h2 { color: #000000;}h1 { font-size: 1.5em;}
-</style>
+<link href='http://fonts.googleapis.com/css?family=DM+Serif+Display' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>About Jen's Kitchen</h1>
-
+    <header>
+        <img src="images/jenskitchen.png" alt="Jen's Kitchen banner" width="660" height="94">
+        <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../menu.html">Menu</a></li>
+            <li><a href="../bgnews.html">News</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="jenskitch.html">Jen's Kitchen<a/></li>
+        </ul>
+    </nav>
+</header>
+   
+<h1>About Jen's Kitchen</h1>
     <p>The recipes listed here are ones that I have developed myself. In some cases, I started with a recipe found in a cookbook or magazine, but over time, I've adapted it enough to call it my own. <i>Bon Appetit!</i></p>
 
     <p>The site also includes links to my favorite online cooking resources. One day, I hope to include a section of restaurant reviews.</p>
