--- a/resume/convers.html
+++ b/resume/convers.html
@@ -3,28 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Serif&family=Lobster+Two:wght@700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 <title>Gallery</title>
-<style>
-body {
-    background-color: #ffffff;
-    font-family: serif;
-    margin: 0 20%;
-    background-color: #d7ecd5; 
-}
-h1 {
-    text-align: center; 
-    font-weight: normal; 
-    margin-top: 10px;
-    font-size: 300%;
-    font-family: Impact;
-    border-bottom: 1px solid black;
-    
-}
-body img {
-    text-align: center;
-}
 
-</style>
 </head>
 
 <body>
