--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif&family=Lobster+Two:wght@700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <title>Brianna Stoccardo</title>
 
 </head>
